style fix on bleeding paragraph on event.page

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ section {
         hsla(46, 65%, 32%, 0.3) 0%,
         hsla(46, 66%, 23%, 0.3) 100%
     ); */
-    background: #0006;
+    background: rgba(0, 0, 0, 0.45);
     width: 100%;
     height: 100%;
     top: 0;
@@ -293,7 +293,7 @@ section {
   font-weight: 600;
 } */
 
-.home .content p:not(.cta-event p) {
+.home .content p:not(.cta-event) {
     width: 50ch;
     padding: 0.25em 0.5em;
     margin: 0.5em auto;
@@ -637,6 +637,10 @@ section.home.eventsBackground {
     text-align: center;
 }
 
+#events-cta-p {
+    max-width: 352px;
+}
+
 .event-header h2 {
     text-shadow: 1px 1px 3px var(--blue-shade-100), 0 1px 2px white;
     font-size: 1.35rem;
@@ -770,6 +774,10 @@ section.home.eventsBackground {
     }
     .home .content h2 {
         font-size: 1.2rem;
+    }
+
+    #events-cta-p {
+        width: 100%;
     }
 }
 
